📝 Update: javadoc